test/compile-fail/assign__wrong_type.he
fn main
{
    let a:int;
    let b:int;

    a = "blah"; //~ ERROR 3001
    a = b = "blah"; //~ ERROR 3001
}
